--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,50 @@
 version: 2.1
 
-jobs:
-  build_and_push:
+executors:
+  docker-executor:
     docker:
-      - image: cimg/python:3.8
+      - image: circleci/python:3.9
+
+jobs:
+  test:
+    executor: docker-executor
     steps:
       - checkout
       - setup_remote_docker:
-          version: 19.03.13
+          version: 20.10.7
       - run:
-          name: Print Docker Hub Username
-          command: echo "Docker Hub Username is '$DOCKERHUB_USERNAME'"
-      - run:
-          name: Install Dependencies
-          command: pip install -r requirements.txt
-      - run:
-          name: Build Docker Image
+          name: Install dependencies
           command: |
-            docker build -t $DOCKERHUB_USERNAME/visionai:${CIRCLE_SHA1} .
+            python -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
       - run:
-          name: Authenticate with Docker Hub
+          name: Run tests
           command: |
-            echo "$DOCKERHUB_PASS" | docker login --username $DOCKERHUB_USERNAME --password-stdin
+            . venv/bin/activate
+            pytest tests/
+
+  build_and_push:
+    docker:
+      - image: docker:20.10.7
+    steps:
+      - setup_remote_docker:
+          version: 20.10.7
+      - checkout
       - run:
-          name: Push Docker Image to Docker Hub
+          name: Build Docker image
+          command: docker build -t mgallai/vision_ai:$CIRCLE_SHA1 .
+      - run:
+          name: Push Docker image
           command: |
-            docker push $DOCKERHUB_USERNAME/visionai:${CIRCLE_SHA1}
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker push mgallai/vision_ai:$CIRCLE_SHA1
 
 workflows:
-  version: 2.1
-  build_and_deploy:
+  version: 2
+  build_and_test:
     jobs:
+      - test
       - build_and_push:
-          filters:
-            branches:
-              only: docker-branch
+          requires:
+            - test
