--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@ executors:
     docker:
       - image: circleci/python:3.9
 
-
 jobs:
   test:
     executor: docker-executor
@@ -23,7 +22,7 @@ jobs:
           name: Run tests
           command: |
             . venv/bin/activate
-            pytest tests/
+            python -m unittest discover -s tests
 
   build_and_push:
     docker:
