--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,13 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: circleci/python:3.9
+      - image: mgallai/vision_ai:latest
 
 jobs:
   test:
     executor: docker-executor
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.7
       - run:
           name: Install dependencies
           command: |
@@ -73,12 +71,12 @@ jobs:
       - checkout
       - run:
           name: Build Docker image
-          command: docker build -t mgallai/vision_ai:$CIRCLE_SHA1 .
+          command: docker build -t mgallai/vision_ai:latest .
       - run:
           name: Push Docker image
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            docker push mgallai/vision_ai:$CIRCLE_SHA1
+            docker push mgallai/vision_ai:latest
 
 workflows:
   version: 2
