--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,25 @@ executors:
       - image: circleci/python:3.9
 
 jobs:
-  build_image:
+  test:
+    executor: docker-executor
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.7
+      - run:
+          name: Install dependencies
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          name: Run tests
+          command: |
+            . venv/bin/activate
+            python -m unittest discover -s tests
+
+  build_and_push:
     docker:
       - image: docker:20.10.7
     steps:
@@ -15,84 +33,18 @@ jobs:
       - checkout
       - run:
           name: Build Docker image
-          command: docker build -t mgallai/vision_ai:${CIRCLE_SHA1} .
+          command: docker build -t mgallai/vision_ai:$CIRCLE_SHA1 .
       - run:
           name: Push Docker image
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            docker push mgallai/vision_ai:${CIRCLE_SHA1}
-
-  test:
-    executor: docker-executor
-    steps:
-      - checkout
-      - run:
-          name: Pull Docker image
-          command: docker pull mgallai/vision_ai:${CIRCLE_SHA1}
-      - run:
-          name: Install dependencies
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c "python -m venv venv && . venv/bin/activate && pip install -r requirements.txt"
-      - run:
-          name: Run test_AI_NumberOfOutputs
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_AI_NumberOfOutputs"
-      - run:
-          name: Run test_AI_PredictedCity
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_AI_PredictedCity"
-      - run:
-          name: Run test_AI_Preprocessing
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_AI_Preprocessing"
-      - run:
-          name: Run test_ButtonPanel
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_ButtonPanel"
-      - run:
-          name: Run test_IconsExist
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_IconsExist"
-      - run:
-          name: Run test_InformationDialog
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_InformationDialog"
-      - run:
-          name: Run test_ModelExist
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_ModelExist"
-      - run:
-          name: Run test_SelectMethod
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_SelectMethod"
-      - run:
-          name: Run test_sort_button
-          command: |
-            docker run --rm -v $(pwd):/usr/src/app -w /usr/src/app mgallai/vision_ai:${CIRCLE_SHA1} \
-            /bin/bash -c ". venv/bin/activate && python -m unittest tests.test_sort_button"
+            docker push mgallai/vision_ai:$CIRCLE_SHA1
 
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_image:
-          filters:
-            branches:
-              only:
-                - main
-      - test:
+      - test
+      - build_and_push:
           requires:
-            - build_image
-          filters:
-            branches:
-              only:
-                - main
+            - test
