editing the docker file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,3 +90,7 @@ workflows:
       - build_and_push:
           requires:
             - test
+    filters:
+      branches:
+        only:
+          - main
