--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,12 @@ jobs:
       - checkout
       - run:
           name: Build Docker image
-          command: docker build -t mgallai/vision_ai:$CIRCLE_SHA1 .
+          command: docker build -t mgallai/vision_ai:v1 .
       - run:
           name: Push Docker image
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            docker push mgallai/vision_ai:$CIRCLE_SHA1
+            docker push mgallai/vision_ai:v1
 
 workflows:
   version: 2
