--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-PyQt5==5.15.10
+pip==24.0
 numpy==1.26.4
 Pillow==10.3.0
+pyqt5==5.15.10
+pyqt5-qt5==5.15.2
+pyqt5-sip==12.13.0
+pytest==8.2.2
+pytest-qt==4.4.0
+pywin32==306
 onnxruntime==1.18.0
+
+
