--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: docker:20.10.7
+      - image: cimg/python:3.9
 
 jobs:
   build_and_push:
@@ -12,6 +12,10 @@ jobs:
       - setup_remote_docker:
           version: 20.10.7
       - checkout
+      - run:
+          name: Start Docker service
+          command: |
+            sudo systemctl start docker
       - run:
           name: Build Docker image
           command: docker build -t mgallai/vision_ai:v1 .
