modified:   .circleci/config.yml, Dockerfile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: cimg/python:3.9
+      - image: docker:20.10.7
 
 jobs:
   build_and_push:
