--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,145 @@
-numpy==1.26.4
-Pillow==10.3.0
+babel==2.15.0
+markupsafe==2.1.5
+pyyaml==6.0.1
+qtpy==2.4.1
+send2trash==1.8.3
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+executing==2.0.1
+filelock==3.14.0
+flatbuffers==24.3.25
+fonttools==4.51.0
+fqdn==1.5.1
+fsspec==2024.6.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+humanfriendly==10.0
+idna==3.7
+intel-openmp==2021.4.0
+ipykernel==6.29.4
+ipython==8.24.0
+ipywidgets==8.1.2
+isoduration==20.11.0
+jedi==0.19.1
+jinja2==3.1.4
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-client==8.6.1
+jupyter-console==6.6.3
+jupyter-core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter-server==2.14.0
+jupyter-server-terminals==0.5.3
+jupyterlab==4.1.8
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.1
+jupyterlab-widgets==3.0.10
+kiwisolver==1.4.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mistune==3.0.2
+mkl==2021.4.0
+mpmath==1.3.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+notebook==7.1.3
+notebook-shim==0.2.4
+onnx==1.16.1
+onnxruntime==1.18.0
+opencv-python==4.9.0.80
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pillow==10.3.0
+platformdirs==4.2.1
+prometheus-client==0.20.0
+prompt-toolkit==3.0.43
+protobuf==5.27.1
+psutil==5.9.8
+py-cpuinfo==9.0.0
+pycparser==2.22
+pygments==2.18.0
+pyparsing==3.1.2
+pyreadline3==3.4.1
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.1
+pywinpty==2.0.13
+pyzmq==26.0.3
+qtconsole==5.5.2
+referencing==0.35.1
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.1
+seaborn==0.13.2
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+stack-data==0.6.3
+sympy==1.12.1
+terminado==0.18.1
+tinycss2==1.3.0
+torch==2.3.1
+torchvision==0.18.1
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240316
+typing-extensions==4.12.1
+tzdata==2024.1
+ultralytics==8.2.28
+ultralytics-thop==0.2.7
+uri-template==1.3.0
+urllib3==2.2.1
+webcolors==1.13
 pyqt5==5.15.10
 pyqt5-qt5==5.15.2
 pyqt5-sip==12.13.0
+cv==1.0.0
+fastjsonschema==2.19.1
+iniconfig==2.0.0
+joblib==1.4.2
+numpy==1.26.4
+pluggy==1.5.0
+pure-eval==0.2.2
 pytest==8.2.2
 pytest-qt==4.4.0
 pywin32==306
-onnxruntime==1.18.0
-
-
+scikit-learn==1.4.2
+scipy==1.13.0
+setuptools==70.0.0
+tbb==2021.12.0
+threadpoolctl==3.5.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.10
