--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      #- image: docker:20.10.7
-      - image: cimg/python:3.9-slim
+      - image: docker:20.10.7
 
 
 jobs:
