--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,17 +19,17 @@ jobs:
       # Build the Docker image
       - run:
           name: Build Docker image
-          command: |
-            TAG="${CIRCLE_SHA1}"
-            docker build -t mgallai/vision_ai:${TAG} .
-      
+          command: docker build -t mgallai/vision_ai:${CIRCLE_SHA1} .
+
       # Log in to Docker Hub using credentials stored in CircleCI environment variables
       - run:
+          name: Log in to Docker Hub
+          command: echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+
+      # Push Docker image
+      - run:
           name: Push Docker image
-          command: |
-            TAG="${CIRCLE_SHA1}"
-            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            docker push mgallai/vision_ai:${TAG}
+          command: docker push mgallai/vision_ai:${CIRCLE_SHA1}
 
 workflows:
   version: 2
